# trivia_pay_new

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
backend/: algokit.toml  pyproject.toml
backend/deploy/: deploy.py  deploy_pyteal.py  deployment_pyteal_receipt.json
backend/smart_contracts/trivia_pay/: contract.py
src/: App.jsx  main.jsx
src/components/: Loader.jsx  Modal.jsx  ReceiveQR.jsx  ScanQR.jsx  StatCard.jsx  TxTable.jsx  WalletConnectBtn.jsx
src/config/: appConfig.js
src/context/: AppContext.jsx
src/layout/: Layout.jsx  Navbar.jsx  Sidebar.jsx
src/pages/: Analytics.jsx  BillSplit.jsx  Dashboard.jsx  Deposit.jsx  GoalTracker.jsx  PaymentTracker.jsx  ScanPay.jsx  Settings.jsx  Transactions.jsx
src/services/: algorand.js  blockchain.js  deflyWallet.js  peraWallet.js
src/styles/: theme.css
